# wallet_balance_service

./: .gitignore  Dockerfile  client.http  init.sql  pyproject.toml
src/wallet_balance_service/: consumer.py  main.py  routes.py
src/wallet_balance_service/db/: db.py  models.py
