[project]
name = "wallet-balance-service"
version = "0.1.0"
description = ""
authors = [
    {name = "carloshss97@gmail.com",email = "carloshss97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "pymysql (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "wallet_balance_service", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


